# datafun-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  INSTRUCTORS.md  README.md  SE_MANIFEST.toml  mkdocs.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  deploy-mkdocs.yml  links.yml  release.yml
docs/: api.md  examples.md  index.md  troubleshooting.md
docs/en/: examples.md  index.md  troubleshooting.md
src/datafun_toolkit/: __init__.py  _version.py  diagnostics.py  logger.py  paths.py  py.typed
tests/: test_diagnostics.py  test_logger.py  test_paths.py
tools/: run_pytest.py
